--- a/config_sample.env
+++ b/config_sample.env
@@ -1,12 +1,8 @@
-# RECOMMNED SETUP 
-## Setup only Required Config & DATABASE_URL
-## Rest of variable can be setup using BOT by /bsetting command
-
 # REQUIRED CONFIG
-BOT_TOKEN = ""
-OWNER_ID = ""
-TELEGRAM_API = ""
-TELEGRAM_HASH = ""
+BOT_TOKEN = "5109932583:AAGMqQ-MpqH2ZZk8MrxMBAgz7hPl8ptI6yA"
+OWNER_ID = "1354699860"
+TELEGRAM_API = "16915440"
+TELEGRAM_HASH = "420fcc24e735091a2937e0303d05ed7a"
 
 # OPTIONAL CONFIG
 GDRIVE_ID = ""
